--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="language">اللغة</string>
     <string name="amoled_mode">وضع Amoled</string>
     <string name="amoled_mode_sub">إذا تم تمكين لون الأسطح فسيتم ضبطه على الظلام المطلق في الوضع الليلي</string>
@@ -2000,9 +2002,9 @@
     <string name="horizontal_border_thickness">سمك الحدود الأفقية</string>
     <string name="vertical_border_thickness">سمك الحدود العمودية</string>
     <plurals name="color_count">
-        <item quantity="zero"/>
+        <item quantity="zero" />
         <item quantity="one">%s اللون</item>
-        <item quantity="two"/>
+        <item quantity="two" />
         <item quantity="few">%s الألوان</item>
         <item quantity="many">%s الألوان</item>
         <item quantity="other">%s الألوان</item>
