--- a/core/resources/src/main/res/values-cs/strings.xml
+++ b/core/resources/src/main/res/values-cs/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="prefix">Předpona</string>
     <string name="smth_went_wrong">Něco se pokazilo: %1$s</string>
     <string name="size">Velikost %1$s</string>
@@ -1999,4 +2001,10 @@
     <string name="type_removebg">Odebrat BG</string>
     <string name="horizontal_border_thickness">Tloušťka horizontálního okraje</string>
     <string name="vertical_border_thickness">Tloušťka vertikálního okraje</string>
+    <plurals name="color_count">
+        <item quantity="many">%s barev</item>
+        <item quantity="one">%s barva</item>
+        <item quantity="few">%s barev</item>
+        <item quantity="other">%s barev</item>
+    </plurals>
 </resources>
