--- a/core/resources/src/main/res/values-fr/strings.xml
+++ b/core/resources/src/main/res/values-fr/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="smth_went_wrong">Quelque chose s\'est mal passé: %1$s</string>
     <string name="size">Dimension %1$s</string>
     <string name="loading">Chargement…</string>
@@ -2001,7 +2003,6 @@
     <string name="vertical_border_thickness">Épaisseur de la bordure verticale</string>
     <plurals name="color_count">
         <item quantity="one">%s couleur</item>
-        <item quantity="many">%s couleurs</item>
         <item quantity="other">%s couleurs</item>
     </plurals>
 </resources>
